fix invite module not centered

--- a/app/assets/stylesheets/modules/modules/_invite.scss
+++ b/app/assets/stylesheets/modules/modules/_invite.scss
@@ -1,5 +1,7 @@
 .module-invite {
   max-width: 720px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .iv-header {
@@ -11,6 +13,7 @@
   font-size: 26px;
   display: inline-block;
   font-weight: lighter;
+  line-height: 1.5em;
 }
 
 .iv-subtitle {
